--- a/GauravMKedia/index.html
+++ b/GauravMKedia/index.html
@@ -1,51 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GauravKedia | Portfolio</title>
+    <title>Gaurav Kedia Profile Card</title>
 </head>
-<link rel="stylesheet" href="style.css">
-<script src="https://kit.fontawesome.com/a076d05399.js"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
+    <script src="https://kit.fontawesome.com/0a1470e582.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="./style.css">
 <body>
-    
-    <nav class="navbar">
-        <div class="logo"><a href="#">KEDIAGAURAV<span>.COM</span></a></div>
-        <ul class="menu">
-            <li><a href="#">Home</a></li>
-            <li><a href="https://kediagaurav.tech">Projects</a></li>
-            <li><a href="https://kediagaurav.tech">Blog</a></li>
-            <li><a href="./Gaurav Kedia Resume.pdf">Resume</a></li>
-        </ul>
-        <div class="menu-btn">
-            <i class="fas fa-bars"></i>
+    <div class="card-container">
+        <div class="upper-container">
+           <div class="image-container">
+              <img src="images/LogoMy.jpg" />
+           </div>
         </div>
-    </nav>
-
-    <!-- Home Section -->
-    <section class="home" id="home">
-        <div class="max">
-            <div class="max-width">
-                <div class="home-content">
-                    <div class="line-1">Hello, my name is</div>
-                    <div class="line-2">Gaurav Kedia</div>
-                    <div class="line-3">And I,m a <span>Youtuber</span></div>
+        <div class="lower-container">
+           <div>
+              <h3>Gaurav Kedia</h3>
+              <h4>Full Stack Developer | Competitive Programmer</h4>
+           </div>
+           <div>
+              <p>I am Gaurav Kedia, 3nd year CSE(AIML) Student at RCOEM Nagpur.I am currently intern at Solar Industries.</p>
+           </div>
+           <div>
+              <a href="https://kediagaurav.tech" class="btn">View profile</a>
+           </div>
+        </div>
+        <div class="row">
+            <!-- Contact Item -->
+            <div class="contact-info-item padd_side_15">
+                <div class="icon">
+                <p><a href="mailto: garuavkedia1709@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a></p>
+                    <!-- <i class="fa fa-envelope"></i> -->
                 </div>
-                <div class="logo">
-                    <img src="images/LogoMy.jpg" alt="Logo">
+                <!-- <h4>E-Mail</h4> -->
+                <!-- <p><a href="mailto: garuavkedia1709@gmail.com" target="_blank">gaurav@gmail.com</a></p> -->
+            </div>
+            <!-- Contact Item -->
+            <div class="contact-info-item padd_side_15">
+                <div class="icon">
+                    <p><a href="https://www.linkedin.com/in/gaurav-kedia-76a424225/" target="_blank"><i class="fa fa-brands fa-linkedin"></i></a></p>
                 </div>
+                <!-- <h4>Linkedin</h4> -->
+                <!-- <p><a href="https://www.linkedin.com/in/gaurav-kedia-76a424225/" -->
+                        <!-- target="_blank">Gaurav.linkedin</a></p> -->
+            </div>
+            <!-- Contact Item -->
+            <div class="contact-info-item padd_side_15">
+                <div class="icon">
+                    <p><a href="https://github.com/GauravMKedia" target="_blank"><i class="fa fa-brands fa-github"></i></a></p>
+                </div>
+                <!-- <h4>Git-Hub</h4> -->
+                <!-- <p><a href="https://github.com/GauravMKedia" target="_blank">GauravKedia.github</a></p> -->
             </div>
         </div>
-        
-    </section>
-
-    <script src="script.js"></script>
-
-
+     </div>
 </body>
-
 </html>
